# md2verticalpptx

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh
md2pptx/: __init__.py  __main__.py  builder.py  cli.py  models.py  parser.py
