[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pptx"
version = "1.0.0"
description = "Extended Markdown to PowerPoint CLI builder"
requires-python = ">=3.10"
dependencies = [
    "comtypes>=1.4.1",
    "rich>=13.0",
    "python-pptx>=0.6.23",
]

[project.scripts]
md2pptx = "md2pptx.cli:main"
